2014-01-15  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.6-cert1-rc2 Released.

	* pbx.c: put copy of ast_exten.data on stack to prevent memory
	  corruption

	  During dialplan execution in pbx_extension_helper(), the contexts
	  global read lock prevents link list corruption, but was released with
	  a pointer to the ast_exten and data later used in variable
	  substitution. Instead, this patch removes pbx_substitute_variables()
	  and locates a copy of the ast_exten data on the stack before
	  releasing the lock, where ast_exten could get free'd by another
	  thread performing a module reload.

	  (issue AST-1179)
	  Reported by: Thomas Arimont
	  (issue AST-1246)
	  Reported by: Alexander Hömig
	  Review: https://reviewboard.asterisk.org/r/3055/

	* chan_sip: Hangup transferer/transferee when transfer to Parking fails

	  When performing a SIP transfer to a Park extension, if the Park
	  fails, chan_sip will currently not hang up either the transferer or
	  the transfer target. This results in the channels being orphaned with
	  no thread to service frames, resulting in stuck channels.

	  This patch immediately hangs up the two channels if a Park fails.

	  (closes issue ASTERISK-22834)
	  Reported by: rsw686
	  Tested by: rsw686

	  (closes issue ASTERISK-23047)
	  Reported by: Tommy Thompson
	  Tested by: Tommy Thomspon

	* verbosity: Fix performance of console verbose messages.

	  The per console verbose level feature as previously implemented
	  caused a large performance penalty.  The fix required some minor
	  incompatibilities if the new rasterisk is used to connect to an
	  earlier version.  If the new rasterisk connects to an older Asterisk
	  version then the root console verbose level is always affected by
	  the "core set verbose" command of the remote console even though it
	  may appear to only affect the current console.  If an older version of
	  rasterisk connects to the new version then the "core set verbose"