@@ -1,130 +1,0 @@
-                                Release Summary
-
-                       certified-asterisk-11.6-cert1-rc2
-
-                                Date: 2014-01-15
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, certified-asterisk-11.6-cert1-rc1.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   8 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                              | Issues     |
-   |          |         |                                      | Referenced |
-   |----------+---------+--------------------------------------+------------|
-   | 405535   | bebuild | Create 11.6-cert1-rc2                |            |
-   |----------+---------+--------------------------------------+------------|
-   | 405537   | bebuild | Merge items for 11.6-cert1-rc2       |            |
-   |----------+---------+--------------------------------------+------------|
-   | 405538   | bebuild | Update ChangeLog                     |            |
-   |----------+---------+--------------------------------------+------------|
-   | 405539   | bebuild | Importing release summary for        |            |
-   |          |         | 11.6-cert1-rc2 release.              |            |
-   |----------+---------+--------------------------------------+------------|
-   | 405540   | bebuild | Importing release summary for        |            |
-   |          |         | 11.6-cert1-rc2 release.              |            |
-   |----------+---------+--------------------------------------+------------|
-   | 405579   | bebuild | Merge r405578, update                |            |
-   |          |         | ChangeLog/summaries                  |            |
-   |----------+---------+--------------------------------------+------------|
-   | 405580   | bebuild | Importing release summary for        |            |
-   |          |         | 11.6-cert1-rc2 release.              |            |
-   |----------+---------+--------------------------------------+------------|
-   | 405596   | bebuild | Importing release summary for        |            |
-   |          |         | 11.6-cert1-rc2 release.              |            |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                                       |    2
- ChangeLog                                      |  157 ++++++++++
- README-SERIOUSLY.bestpractices.txt             |   24 +
- UPGRADE.txt                                    |   35 ++
- apps/app_confbridge.c                          |    6
- apps/app_dumpchan.c                            |   20 -
- apps/app_sms.c                                 |    3
- apps/app_verbose.c                             |    4
- apps/confbridge/conf_state_multi_marked.c      |   25 +
- certified-asterisk-11.6-cert1-rc2-summary.html |   89 ++++++
- certified-asterisk-11.6-cert1-rc2-summary.txt  |  127 ++++++++
- channels/chan_sip.c                            |   39 +-
- configs/asterisk.conf.sample                   |    6
- configs/logger.conf.sample                     |   19 -
- funcs/func_db.c                                |   20 +
- funcs/func_env.c                               |   28 +
- funcs/func_lock.c                              |   21 +
- funcs/func_realtime.c                          |   60 ++--
- funcs/func_shell.c                             |   18 -
- funcs/func_timeout.c                           |   16 -
- include/asterisk/logger.h                      |  101 +++++--
- include/asterisk/pbx.h                         |   54 +++
- main/asterisk.c                                |  195 +++++++++----
- main/cli.c                                     |  359 ++++++++++++++++---------
- main/db.c                                      |   24 -
- main/logger.c                                  |  211 ++++++++++++--
- main/manager.c                                 |    8
- main/pbx.c                                     |  292 ++++++++++++++++++--
- main/tcptls.c                                  |   11
- 29 files changed, 1614 insertions(+), 360 deletions(-)
-
-     ----------------------------------------------------------------------
