@@ -1,3 +1,7 @@
+2014-01-22  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.6-cert1 Released.
+
 2014-01-15  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.6-cert1-rc2 Released.
